--- a/Social-connect/package.json
+++ b/Social-connect/package.json
@@ -1,6 +1,7 @@
 {
-  "name": "uiu-social-network",
-  "version": "0.1.0",
+  "name": "unip",
+  "version": "1.0.0",
+  "description": "A modern social network platform for connecting with others",
   "private": true,
   "type": "module",
   "scripts": {
